# keybox-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README_zh-CN.md  README_zh.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/: ROADMAP.md
docs/superpowers/drills/: 2026-06-13-keybox.md  2026-06-16-keybox-metadata-encryption-architecture.md
docs/superpowers/plans/: 2026-06-13-keybox-implementation.md  2026-06-14-keybox-generate-plan.md  2026-06-18-keybox-unified-keystore.md
docs/superpowers/specs/: 2026-06-13-keybox-design.md  2026-06-14-keybox-generate-design.md  2026-06-18-keybox-metadata-store-design.md  2026-06-27-multi-level-unlock.md
scripts/: test.ps1  test.sh
src/: cli.rs  env_run.rs  error.rs  generate.rs  interactive.rs  lib.rs  main.rs  store.rs  tier.rs
src/crypto/: age_ops.rs  identity.rs  keyfile.rs  mod.rs
src/daemon/: client.rs  mod.rs  protocol.rs  server.rs  token.rs
src/keystore/: format.rs  mod.rs  ops.rs  schema.rs
src/protect/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: integration.rs  unit.rs
tests/common/: mod.rs
tests/integration/: add_get_tests.rs  daemon_tests.rs  generate_tests.rs  list_delete_tests.rs  non_interactive_tests.rs  update_tests.rs
tests/unit/: cli_tests.rs  crypto_tests.rs  daemon_protocol_tests.rs  generate_tests.rs  interactive_tests.rs  protect_tests.rs  store_tests.rs  tier_tests.rs
