[package]
name = "keybox"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
age = "0.10"
sha2 = "0.10"
rand = "0.8"
ring = "0.17"
dirs = "5"
rpassword = "7"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
