[package]
name = "keybox"
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
age = "0.10"
sha2 = "0.10"
rand = "0.8"
ring = "0.17"
dirs = "5"
rpassword = "7"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
atty = "0.2"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_System_Pipes", "Win32_Storage_FileSystem"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
base64 = "0.21"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
